Set correct breakpoint in the footer section, fix the footer-logo picture file name, fix about-us section mobile adaptive, set hover activity on the features section cards

--- a/source/sass/block-styles/_about-us.scss
+++ b/source/sass/block-styles/_about-us.scss
@@ -20,7 +20,7 @@
 
   @media (max-width: 727px) {
     min-height: 600px;
-    width: 290px;
+    width: 100%;
     background-image: none;
     padding: 55px 0 10px 0;
   }
