--- a/source/sass/block-styles/_footer.scss
+++ b/source/sass/block-styles/_footer.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   padding: 65px 0 0 0;
 
-  @media (max-width: 1024px) {
+  @media (max-width: 1023px) {
     padding: 0;
   }
 }
@@ -30,7 +30,7 @@
   line-height: 16px;
   font-stretch: semi-condensed;
 
-  @media (max-width: 1024px) {
+  @media (max-width: 1023px) {
     margin: 0 0 28px 0;
   }
 
@@ -86,7 +86,7 @@
   flex-direction: column;
   min-height: 195px;
 
-  @media (max-width: 1024px) {
+  @media (max-width: 1023px) {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -106,7 +106,7 @@
 .footer__footer-header p {
   display: none;
 
-  @media (max-width: 1024px) {
+  @media (max-width: 1023px) {
     display: flex;
     font-family: "PT Mono", "Courier", monospace;
     font-size: 13px;
@@ -120,7 +120,7 @@
 .footer__navigation {
   flex-basis: 30%;
 
-  @media (max-width: 1024px) {
+  @media (max-width: 1023px) {
     flex-basis: 50%;
   }
 
@@ -133,7 +133,7 @@
 .footer__contacts {
   flex-basis: 25%;
 
-  @media (max-width: 1024px) {
+  @media (max-width: 1023px) {
     flex-basis: 50%;
   }
 
